--- a/cv.html
+++ b/cv.html
@@ -39,25 +39,39 @@
 					</header>
 
 				<!-- Main -->
-					<article id="main">
-						<header>
-							<h2>Historique</h2>
-							<p>Experiences professionelles</p>
-						</header>
-						<section class="wrapper style5">
-							<div class="inner">
+<article id="main">
+<header>
+<h2>Historique</h2>
+<p>Experiences professionelles</p>
+</header>
+<section class="wrapper style5">
+<div class="inner">
+<em>Bientôt</em>
+<h2><em>Coordinatrice BIM - </em> <a href="http://provencherroy.ca/fr/">Provencher_Roy</a> - Montréal (Québec)</h2>
 
-								<h1>EXPERIENCES PROFESSIONNELLES</h1>
-<p>Interventions dans des formations:</p>
-<ul>
-<li>« <a href="http://poleatlantique.com/index.php/project/introduction-bim/">Introduction BIM</a> » à l’école d’architecture de Nantes</li>
-<li>« <a href="https://www.ec-nantes.fr/ingenieur-generaliste/les-options-de-2e-et-3e-annees/option-ville-numerique-189042.kjsp">La ville numérique</a> » à l’Ecole Centrale de Nantes</li>
-</ul>
-<p><em>De mars 2015 à décembre 2017</em></p>
-<h2><em>BIM Manager - site de Nantes et Lorient - Nantes (44)</em> <a href="http://www.a-i-a.fr/">AIA Life Designer</a></h2>
-<p>Support Revit multi-métier (Architecture, Structure, MEP, VRD…), mise en place de formation pour les projeteurs et les chefs de projet.<br>
-Coordination des équipes multi métiers (architectes, structure, plomberie, électricité, économiste…) sur des projets BIM.<br>
-Mise en place de méthodologie de travail BIM avec des conventions BIM pour la conception et l’exécution.</p>
+					<section id="three" class="wrapper style5 special">
+						<div class="inner">
+							<ul class="features">
+								<li class="icon fa fa-book">
+									<h3>Interventions dans des formations :</h3>
+									<p>«<a href="http://poleatlantique.com/index.php/project/introduction-bim/">Introduction BIM</a>» à l’école d’architecture de Nantes</p>
+									<p>«<a href="https://www.ec-nantes.fr/ingenieur-generaliste/les-options-de-2e-et-3e-annees/option-ville-numerique-189042.kjsp">La ville numérique</a> » à l’Ecole Centrale de Nantes</p>
+								</li>
+								<li class="icon fa fa-users">
+									<h3>Narug</h3>
+									<p>Je participe à une association d'utilisateurs REVIT<br />
+									   Entraide et conseils.</p>
+							</ul>
+							
+						</div>
+					</section>
+
+<em>De mars 2015 à décembre 2017</em>
+<h2><em>BIM Manageuse site de Nantes et Lorient - </em> <a href="http://www.a-i-a.fr/">AIA Life Designer</a> - Nantes (44)</h2>
+<p>Support Revit multi-métier (Architecture, Structure, MEP, VRD…), mise en place de formations pour les projeteurs et les chefs de projet.<br>
+Coordination des équipes multi métiers (architectes, structure, plomberie, électricité, économiste…) sur les projets BIM.<br>
+Mise en place de méthodologie de travail BIM avec des conventions BIM pour la conception et l’exécution.<br>
+Interventions "retour d'expérience" au JedisBIM de <a href="https://www.novabuild.fr">Novabuild</a> et chez <a href="https://www.atlancad.fr">Atlancad</a></p>
 <ul>
 <li>[ ] Revit</li>
 <li>[ ] Naviswork</li>
@@ -66,10 +80,10 @@ Mise en place de méthodologie de travail BIM avec des conventions BIM pour la c
 <li>[ ] Dynamo</li>
 <li>[ ] Office.</li>
 </ul>
-<p><em>De novembre 2011 à février 2015 (3 ans et 6 mois)</em></p>
-<h2><em>Référente maquette numérique – Nantes (44)</em> <a href="http://www.bouygues-batiment-grand-ouest.fr/">Bouygues Bâtiment Grand Ouest</a></h2>
-<p>Réalisation de maquette numérique pour la synthèse habitat (reprise des plans des différents lot en maquette numérique, recherche de solution en cas de non-conformité) et vérification de la réglementation PMR et incendie.<br>
-Mise en place d’un guide d’utilisation Revit. Création d’un gabarit Revit et de familles pour le service conception en lien avec les autres services (méthodes, structure, fluides…).</p>
+<em>De novembre 2011 à février 2015 (3 ans et 6 mois)</em>
+<h2><em>Référente maquette numérique – </em> <a href="http://www.bouygues-batiment-grand-ouest.fr/">Bouygues Bâtiment Grand Ouest</a> - Nantes (44)</h2>
+Réalisation de maquette numérique pour la synthèse habitat (reprise des plans des différents lot en maquette numérique, recherche de solution en cas de non-conformité) et vérification de la réglementation PMR et incendie.<br>
+Mise en place d’un guide d’utilisation Revit. Création d’un gabarit Revit et de familles pour le service conception en lien avec les autres services (méthodes, structure, fluides…).
 <ul>
 <li>[ ] Revit</li>
 <li>[ ] Design Review</li>
@@ -78,15 +92,15 @@ Mise en place d’un guide d’utilisation Revit. Création d’un gabarit Revit
 <li>[ ] Autocad</li>
 <li>[ ] Office.</li>
 </ul>
-<p><em>2011 – (3mois)</em></p>
-<h2><em>Chef de projet - Nantes (44)</em> <a href="http://www.allianceconstruction.fr/">ALLIANCE CONSTRUCTION</a></h2>
+<em>2011 – (3 mois)</em>
+<h2><em>Chef de projet - </em> <a href="http://www.allianceconstruction.fr/">ALLIANCE CONSTRUCTION</a> - Nantes (44)</h2>
 <ul>
 <li>[ ] MIOA</li>
 <li>[ ] Photoshop</li>
 <li>[ ] Office.</li>
 </ul>
-<p><em>2008 – 2011 (3 ans et 6 mois)</em></p>
-<h2><em>Coordinatrice de projet et dessinatrice – P. BOUET Architectes - Rennes (35)</em></h2>
+<em>2008 – 2011 (3 ans et 6 mois)</em>
+<h2><em>Coordinatrice de projet et dessinatrice – Agence d'architecture BOUET - Rennes (35)</em></h2>
 <p>Relevés de bâtiments existants.<br>
 Réalisation de plans, de l’esquisse au DOE (maisons individuelles; écoles; logements collectifs; EPHAD; bureaux; réfectoire…).<br>
 Réunions de chantier. Réalisation d’un outil de calcul en isolation thermique, formation des collaborateurs sur Sketchup et Artlantis.</p>
@@ -97,8 +111,8 @@ Réunions de chantier. Réalisation d’un outil de calcul en isolation thermiqu
 <li>[ ] Artlantis</li>
 <li>[ ] Office.</li>
 </ul>
-<p><em>2007 (1 ans)</em></p>
-<h2><em>Coordinatrice de projet et dessinatrice - Bayeux (14)</em> <a href="http://www.ateliervoisin.fr/architecture-environnement/">Atelier dʼArchitecture Environnementale Voisins et Associés</a></h2>
+<em>2007 (1 ans)</em>
+<h2><em>Coordinatrice de projet et dessinatrice - </em> <a href="http://www.ateliervoisin.fr/architecture-environnement/">Atelier dʼArchitecture Environnementale Voisins et Associés</a> - Bayeux (14)</h2>
 <p>Concours. Relevés de bâtiments existants. Réalisation de plans et 3D, de l’esquisse au DCE (maisons individuelles, bureaux, musée…). Recherche de matériaux.</p>
 <ul>
 <li>[ ] Autocad</li>
@@ -107,7 +121,7 @@ Réunions de chantier. Réalisation d’un outil de calcul en isolation thermiqu
 <li>[ ] Sketchup</li>
 <li>[ ] Office.</li>
 </ul>
-<p><em>2005 – 2007 (1 ans et 6 mois)</em></p>
+<em>2005 – 2007 (1 ans et 6 mois)</em>
 <h2><em>Responsable des dessinateurs(trices) - FRANCK DʼORTANE - Grenoble (38)</em></h2>
 <p>Constructeur de maisons individuelles en ossature bois.<br>
 Réalisation de plans, de l’esquisse au DCE (maisons individuelles ; bureaux). Préparation et suivis de chantier.</p>
@@ -116,8 +130,8 @@ Réalisation de plans, de l’esquisse au DCE (maisons individuelles ; bureaux).
 <li>[ ] Photoshop</li>
 <li>[ ] Office</li>
 </ul>
-<p><em>2003 – 2005 (1 ans et 6 mois)</em></p>
-<h2><em>Dessinatrice métreur - Château Gontier (53)</em> <a href="http://www.cruard-charpente.com/">CRUARD CHARPENTE</a> et <a href="https://www.mbc-maisonbois.com/">MAISON BOIS CRUARD</a> mi-temps dans chaque entreprise</h2>
+<em>2003 – 2005 (1 ans et 6 mois)</em>
+<h2><em>Dessinatrice métreur - </em> <a href="http://www.cruard-charpente.com/">CRUARD CHARPENTE</a> et <a href="https://www.mbc-maisonbois.com/">MAISON BOIS CRUARD</a> mi-temps dans chaque entreprise - Château Gontier (53)</h2>
 <p>Chez MBC : Réalisation de plans, de l’esquisse au PC de maisons individuelles.<br>
 Chez Cruard : Réalisation des plans de charpente/ossature bois.<br>
 Mise en place d’une méthodologie de travail collaborative entre l’architecte et bureau d’étude sur le logiciel SEMA.</p>
@@ -127,25 +141,35 @@ Mise en place d’une méthodologie de travail collaborative entre l’architect
 <li>[ ] Photoshop</li>
 <li>[ ] Office.</li>
 </ul>
-<p><em>1998 à 2003</em></p>
+<em>1998 à 2003</em>
 <h2><em>Stages dans différentes entreprises :</em></h2>
 <p>Cabinet d’architectes, bureau d’étude béton, service urbanisme de mairie et conseil général, groupement d’artisans.</p>
 </div>
 							</div>
 						</section>
 					</article>
-
+					
+				<!-- CTA -->
+					<section id="cta" class="wrapper style4">
+						<div class="inner">
+							<header>
+								<h2>Et maintenant ... ?</h2>
+								<p>Plus d'informations sur les differents projets auxquels j'ai pu participer.</p>
+							</header>
+							<ul class="actions vertical">
+								<li><a href="projets.html" class="button fit special">Projets</a></li>
+								<li><a href="index.html" class="button fit">retour</a></li>
+							</ul>
+						</div>
+					</section>
 				<!-- Footer -->
 					<footer id="footer">
 						<ul class="icons">
-							<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
-							<li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
-							<li><a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
-							<li><a href="#" class="icon fa-dribbble"><span class="label">Dribbble</span></a></li>
-							<li><a href="#" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
+							<li><a href="https://twitter.com/emilie_save" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
+							<li><a href="http://linkedin.com/in/emiliemelodia" class="icon fa fa-linkedin-square"><span class="label">Linkedin</span></a></li>
 						</ul>
 						<ul class="copyright">
-							<li>&copy; Untitled</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+							<li>&copy; Mélodia</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 						</ul>
 					</footer>
 
