--- a/index.html
+++ b/index.html
@@ -60,9 +60,9 @@
 								À différents postes : dessinatrice, métreur, référent DAO, coordinatrice BIM, BIM manageuse.</p>
 							</header>
 							<ul class="icons major">
-								<li><span class="icon fa-diamond major style1"><span class="label">Lorem</span></span></li>
-								<li><span class="icon fa-heart-o major style2"><span class="label">Ipsum</span></span></li>
-								<li><span class="icon fa-code major style3"><span class="label">Dolor</span></span></li>
+								<li><span class="icon fa fa-hand-spock-o major style1"><span class="label">Geek</span></span></li>
+								<li><span class="icon fa fa-users major style2"><span class="label">Work</span></span></li>
+								<li><span class="icon fa fa-coffee major style3"><span class="label">Coffee</span></span></li>
 							</ul>
 						</div>
 					</section>
@@ -82,7 +82,7 @@
 							<div class="image"><img src="images/aeroport.jpg" alt="" /></div><div class="content">
 								<h2>Extension de l'aéroport Blagnac de Toulouse </h2>
 								<p>Maître d'ouvrage : Aéroport de Toulouse - Blagnac<br />
-									Surface : 2500 m² + 2000 m² de restructuration<br />
+									Surface : 2500 m<sup>2</sup> + 2000 m<sup>2</sup> de restructuration<br />
 									Montant des travaux: 8 M€ HT<br />
 									Date Chantier : d'avril 2017 à mars 2018</p>
 							</div>
@@ -91,7 +91,7 @@
 							<div class="image"><img src="images/lycee.jpg" alt="" /></div><div class="content">
 								<h2>Lycée Nort sur Erdre (44)</h2>
 								<p>Maître d’ouvrage : Région Pays de la Loire<br />
-									Surface : 13 000 m² Lycée + 690 m² logements de fonction<br />
+									Surface : 13 000 m<sup>2</sup> Lycée + 690 m<sup>2</sup> logements de fonction<br />
 									Montant des Travaux : 22.6 M€ HT<br />
 									Livraison : rentrée 2019<br />
 							</div>
@@ -102,35 +102,19 @@
 					<section id="three" class="wrapper style3 special">
 						<div class="inner">
 							<header class="major">
-								<h2>Accumsan mus tortor nunc aliquet</h2>
-								<p>Aliquam ut ex ut augue consectetur interdum. Donec amet imperdiet eleifend<br />
-								fringilla tincidunt. Nullam dui leo Aenean mi ligula, rhoncus ullamcorper.</p>
+								<h2>Le travail n'est pas tout !</h2>
+								<p>L'experience professionnelle n'est pas la seule corde à mon arc.<br />
+								Mes loisirs, mes compétences autres, tout cela est à prendre en compte.</p>
 							</header>
 							<ul class="features">
-								<li class="icon fa-paper-plane-o">
-									<h3>Arcu accumsan</h3>
-									<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
+								<li class="icon fa fa-book">
+									<h3>Lecture</h3>
+									<p>Science-fiction, policier, romans classiques. Quoi de mieux qu'un bon livre avec un bon café ?</p>
 								</li>
-								<li class="icon fa-laptop">
-									<h3>Ac Augue Eget</h3>
-									<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
-								</li>
-								<li class="icon fa-code">
-									<h3>Mus Scelerisque</h3>
-									<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
-								</li>
-								<li class="icon fa-headphones">
-									<h3>Mauris Imperdiet</h3>
-									<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
-								</li>
-								<li class="icon fa-heart-o">
-									<h3>Aenean Primis</h3>
-									<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
-								</li>
-								<li class="icon fa-flag-o">
-									<h3>Tortor Ut</h3>
-									<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
-								</li>
+								<li class="icon fa fa-camera-retro">
+									<h3>Photographie</h3>
+									<p>Garder l'oeil ouvert, le nez au vent<br />
+									   La photo pour découvrir la ville et l'architecture.</p>
 							</ul>
 						</div>
 					</section>
@@ -139,12 +123,12 @@
 					<section id="cta" class="wrapper style4">
 						<div class="inner">
 							<header>
-								<h2>Arcue ut vel commodo</h2>
-								<p>Aliquam ut ex ut augue consectetur interdum endrerit imperdiet amet eleifend fringilla.</p>
+								<h2>Et maintenant ... ?</h2>
+								<p>Plus d'informations sur mon CV ou sur les differents projets auxquels j'ai pu participer.</p>
 							</header>
 							<ul class="actions vertical">
-								<li><a href="#" class="button fit special">Activate</a></li>
-								<li><a href="#" class="button fit">Learn More</a></li>
+								<li><a href="cv.html" class="button fit special">CV</a></li>
+								<li><a href="projets.html" class="button fit">Projets</a></li>
 							</ul>
 						</div>
 					</section>
@@ -152,10 +136,8 @@
 				<!-- Footer -->
 					<footer id="footer">
 						<ul class="icons">
-							<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
-							<li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
-							<li><a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
-							<li><a href="#" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
+							<li><a href="https://twitter.com/emilie_save" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
+							<li><a href="http://linkedin.com/in/emiliemelodia" class="icon fa fa-linkedin-square"><span class="label">Linkedin</span></a></li>
 						</ul>
 						<ul class="copyright">
 							<li>&copy; Mélodia</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
