--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
 					<section id="banner">
 						<div class="inner">
 							<h2>Emilie Mélodia Saverna</h2>
-							<p>Depuis 2003 dans différentes entreprises du bâtiment<br />
-							BIM manageuse, formatrice, geek, photographe...<br />
+							<p>Depuis 2003 dans différentes entreprises du bâtiment.<br />
+							Spécialiste BIM, formatrice, geek, photographe...<br />
 							<ul class="actions">
 								<li><a href="cv.html" class="button special">CV</a></li>
 							</ul>
