--- a/projets.html
+++ b/projets.html
@@ -50,7 +50,9 @@
 								<section>
 									<h4>Interview vidéo</h4>
 									<p>Réalisée en mars 2015 pour Syntec ingénierie</p>
+									<div class="video-container">
 									<iframe width="960" height="565" src="https://www.youtube.com/embed/oND2RyQbFLg" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+									</div>
 									<hr />
 								</section>
 
