--- a/projets.html
+++ b/projets.html
@@ -50,9 +50,7 @@
 								<section>
 									<h4>Interview vidéo</h4>
 									<p>Réalisée en mars 2015 pour Syntec ingénierie</p>
-									<div class="video-container">
 									<iframe width="960" height="565" src="https://www.youtube.com/embed/oND2RyQbFLg" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
-									</div>
 									<hr />
 								</section>
 
@@ -96,7 +94,7 @@
 									<p>Management BIM de Chantier et Coordination BIM (architecture,plomberie, ventilation, chauffage, électricité, aménagement extérieur, synthèse technique et architecturale, économie ) et support Revit.<p/>
 									<!-- projets -->
 									<p><h4>Lycée Nort sur Erdre (44)</h4><br>
-									Région Pays de la Loire<br>
+									Maitre d'ouvrage : Région Pays de la Loire<br>
 										Surface : 13 000 m<sup>2</sup> lycée + 690 m<sup>2</sup> logements de fonction<br>
 										Montant des Travaux : 22,6 M€ HT<br>
 										Livraison : rentrée 2019<br>
@@ -108,6 +106,33 @@
 									</div>
 									<p>Management et Coordination BIM (architecture, plomberie, ventilation, chauffage, électricité, aménagement extérieur,synthèse technique et architecturale, économie, architecture d'intérieur, HQE ) et support Revit.<p/>
 									<!-- projets -->
+									<p><h4>Nouveau Siège du Crédit Agricole du Mans (72)</h4><br>
+									Maitre d'ouvrage : Crédit Agricole Anjou Maine<br>
+										Surface : 10 000 m<sup>2</sup><br>
+										Montant des Travaux : 22,6 M€ HT<br>
+										Livraison : Décembre 2019<br>
+										Equipe de conception : 100% AIA Nantes</p>
+									<div class="box alt">
+										<div class="row uniform 50%">
+											<div class="5u"><span class="image fit"><img src="images/em_bim1.jpg" alt="" /></span></div>
+											<div class="5u"><span class="image fit"><img src="images/em_bim2.jpg" alt="" /></span></div>
+										</div>
+									</div>
+									<p>Coordination BIM (architecture,plomberie, ventilation, chauffage, électricité, aménagement extérieur,synthèse technique et architecturale, économie ) et support Revit du concours à la fin de chantier. <p/>
+									<!-- projets -->
+									<p><h4>Extension du CHU de Saint Brieuc (22) </h4><br>
+									Maitre d'ouvrage : Centre Hospitalier de Saint Brieuc<br>
+										Surface :  5 500 m<sup>2</sup> Extension + 5 500 m<sup>2</sup> réhabilitation<br>
+										Montant des Travaux : 22 M€ HT<br>
+										Début des travaux : Avril 2018<br>
+										Equipe de conception : 100% AIA Nantes</p>
+									<div class="box alt">
+										<div class="row uniform 50%">
+											<div class="5u"><span class="image fit"><img src="images/CHU1.jpg" alt="" /></span></div>
+											<div class="5u"><span class="image fit"><img src="images/CHU2.jpg" alt="" /></span></div>
+										</div>
+									</div>
+									<p>Management et Coordination BIM (rchitecture, plomberie, ventilation, chauffage, électricité, aménagement extérieur,synthèse technique et architecturale, économie, architecture d'intérieur, HQE ) et support Revit.<p/>
 							</div>
 						</section>
 					</article>
