--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 							<header class="major">
 								<h2>Je travaille depuis 2003 dans différentes entreprises du bâtiment</h2>
 								<p>bureaux d’étude, cabinets d’architectes, entreprise générale<br />
-								À différents postes : dessinatrice, métreur, référent DAO, coordinatrice BIM, BIM manageuse.</p>
+								À différents postes : dessinatrice, métreur, référente DAO, coordinatrice BIM, BIM manageuse.</p>
 							</header>
 							<ul class="icons major">
 								<li><span class="icon fa fa-hand-spock-o major style1"><span class="label">Geek</span></span></li>
@@ -72,28 +72,19 @@
 						<section class="spotlight">
 							<div class="image"><img src="images/pic01.png" alt="" /></div><div class="content">
 								<h2>Hôpital Princesse Grace de Monaco</h2>
-								<p>Maitre d'ouvrage : Principauté de Monaco<br />
-									Surface : 85 000 m<sup>2</sup><br />
-									Montant des travaux : 358 M€ HT<br />
-									Livraison : 2028 (4 phases : Parking, ailes 1 & 2, aile 3 et aile 4)</p>
+								<p>Coordinatrice BIM ingénierie et support Revit pour les phases de conception</p>
 							</div>
 						</section>
 						<section class="spotlight">
 							<div class="image"><img src="images/aeroport.jpg" alt="" /></div><div class="content">
 								<h2>Extension de l'aéroport Blagnac de Toulouse </h2>
-								<p>Maître d'ouvrage : Aéroport de Toulouse - Blagnac<br />
-									Surface : 2500 m<sup>2</sup> + 2000 m<sup>2</sup> de restructuration<br />
-									Montant des travaux: 8 M€ HT<br />
-									Date Chantier : d'avril 2017 à mars 2018</p>
+								<p>BIM manageuse et support Revit pour les phases de conception et exécution</p>
 							</div>
 						</section>
 						<section class="spotlight">
 							<div class="image"><img src="images/lycee.jpg" alt="" /></div><div class="content">
 								<h2>Lycée Nort sur Erdre (44)</h2>
-								<p>Maître d’ouvrage : Région Pays de la Loire<br />
-									Surface : 13 000 m<sup>2</sup> Lycée + 690 m<sup>2</sup> logements de fonction<br />
-									Montant des Travaux : 22.6 M€ HT<br />
-									Livraison : rentrée 2019<br />
+								<p>BIM manageuse et support Revit pour les phases de conception</p>
 							</div>
 						</section>
 					</section>
