--- a/cv.html
+++ b/cv.html
@@ -58,8 +58,8 @@
 									<p>«<a href="https://www.ec-nantes.fr/ingenieur-generaliste/les-options-de-2e-et-3e-annees/option-ville-numerique-189042.kjsp">La ville numérique</a> » à l’Ecole Centrale de Nantes</p>
 								</li>
 								<li class="icon fa fa-users">
-									<h3>Narug</h3>
-									<p>Je participe à une association d'utilisateurs REVIT<br />
+									<h3>NARUG (Nantes Atlantique Revit User Group)</h3>
+									<p>Je suis membre d'une association qui regroupe des utilisa.teurs.trices Revit ou Revit User Group (RUG), basé dans la région de Nantes.<br />
 									   Entraide et conseils.</p>
 							</ul>
 							
