--- a/cv.html
+++ b/cv.html
@@ -131,7 +131,7 @@ Réalisation de plans, de l’esquisse au DCE (maisons individuelles ; bureaux).
 <li>[ ] Office</li>
 </ul>
 <em>2003 – 2005 (1 ans et 6 mois)</em>
-<h2><em>Dessinatrice métreur - </em> <a href="http://www.cruard-charpente.com/">CRUARD CHARPENTE</a> et <a href="https://www.mbc-maisonbois.com/">MAISON BOIS CRUARD</a> mi-temps dans chaque entreprise - Château Gontier (53)</h2>
+<h2><em>Dessinatrice métreuse - </em> <a href="http://www.cruard-charpente.com/">CRUARD CHARPENTE</a> et <a href="https://www.mbc-maisonbois.com/">MAISON BOIS CRUARD</a> mi-temps dans chaque entreprise - Château Gontier (53)</h2>
 <p>Chez MBC : Réalisation de plans, de l’esquisse au PC de maisons individuelles.<br>
 Chez Cruard : Réalisation des plans de charpente/ossature bois.<br>
 Mise en place d’une méthodologie de travail collaborative entre l’architecte et bureau d’étude sur le logiciel SEMA.</p>
