--- a/cv.html
+++ b/cv.html
@@ -43,6 +43,9 @@
 <header>
 <h2>Historique</h2>
 <p>Experiences professionelles</p>
+<ul class="icons">
+<li><a href="doc/CV Emilie MELODIA-Saverna.pdf" class="button fit special" download="CV Emilie Mélodia-Saverna">Télécharger CV</a></li>
+</ul>
 </header>
 <section class="wrapper style5">
 <div class="inner">
@@ -60,7 +63,7 @@
 								<li class="icon fa fa-users">
 									<h3>NARUG (Nantes Atlantique Revit User Group)</h3>
 									<p>Membre d'une association qui regroupe des utilisateur.trice.s Revit ou Revit User Group (RUG), basé dans la région de Nantes.<br />
-									   "<a href="https://www.facebook.com/groups/narug/">Facebook</a>" - "<a href="https://twitter.com/NATL_RUG">Twitter</a>" .</p>
+									   <a href="https://www.facebook.com/groups/narug/">Facebook</a> - <a href="https://twitter.com/NATL_RUG">Twitter</a></p>
 							</ul>
 							
 						</div>
@@ -183,6 +186,5 @@ Mise en place d’une méthodologie de travail collaborative entre l’architect
 			<script src="assets/js/util.js"></script>
 			<!--[if lte IE 8]><script src="assets/js/ie/respond.min.js"></script><![endif]-->
 			<script src="assets/js/main.js"></script>
-
 	</body>
 </html>
