--- a/cv.html
+++ b/cv.html
@@ -75,75 +75,82 @@
 Coordination des équipes multi métiers (architectes, structure, plomberie, électricité, économiste…) sur les projets BIM.<br>
 Mise en place de méthodologie de travail BIM avec des conventions BIM pour la conception et l’exécution.<br>
 Interventions "retour d'expérience" au JedisBIM de <a href="https://www.novabuild.fr">Novabuild</a> et chez <a href="https://www.atlancad.fr">Atlancad</a></p>
-<ul>
-<li>[ ] Revit</li>
-<li>[ ] Naviswork</li>
-<li>[ ] Tekla BIMsight</li>
-<li>[ ] Design Review</li>
-<li>[ ] Dynamo</li>
-<li>[ ] Office.</li>
+<ul class="icons">
+<li class="icon fa-circle-o"> Revit</li>
+<li class="icon fa-circle-o"> Naviswork</li>
+<li class="icon fa-circle-o"> Tekla BIMsight</li>
+<li class="icon fa-circle-o"> Design Review</li>
+<li class="icon fa-circle-o"> Dynamo</li>
+<li class="icon fa-circle-o"> Office.</li>
 </ul>
+</br>
 <em>De novembre 2011 à février 2015 (3 ans et 6 mois)</em>
 <h2><em>Référente maquette numérique – </em> <a href="http://www.bouygues-batiment-grand-ouest.fr/">Bouygues Bâtiment Grand Ouest</a> - Nantes (44)</h2>
-Réalisation de maquette numérique pour la synthèse habitat (reprise des plans des différents lot en maquette numérique, recherche de solution en cas de non-conformité) et vérification de la réglementation PMR et incendie.<br>
-Mise en place d’un guide d’utilisation Revit. Création d’un gabarit Revit et de familles pour le service conception en lien avec les autres services (méthodes, structure, fluides…).
-<ul>
-<li>[ ] Revit</li>
-<li>[ ] Design Review</li>
-<li>[ ] Photoshop</li>
-<li>[ ] Sketchup</li>
-<li>[ ] Autocad</li>
-<li>[ ] Office.</li>
+<p>Réalisation de maquette numérique pour la synthèse habitat (reprise des plans des différents lot en maquette numérique, recherche de solution en cas de non-conformité) et vérification de la réglementation PMR et incendie.<br>
+Mise en place d’un guide d’utilisation Revit. Création d’un gabarit Revit et de familles pour le service conception en lien avec les autres services (méthodes, structure, fluides…).</p>
+<ul class="icons">
+<li class="icon fa-circle-o"> Revit</li>
+<li class="icon fa-circle-o"> Design Review</li>
+<li class="icon fa-circle-o"> Photoshop</li>
+<li class="icon fa-circle-o"> Sketchup</li>
+<li class="icon fa-circle-o"> Autocad</li>
+<li class="icon fa-circle-o"> Office.</li>
 </ul>
+</br>
 <em>2011 – (3 mois)</em>
 <h2><em>Chef de projet - </em> <a href="http://www.allianceconstruction.fr/">ALLIANCE CONSTRUCTION</a> - Nantes (44)</h2>
-<ul>
-<li>[ ] MIOA</li>
-<li>[ ] Photoshop</li>
-<li>[ ] Office.</li>
+<ul class="icons">
+<li class="icon fa-circle-o"> MIOA</li>
+<li class="icon fa-circle-o"> Photoshop</li>
+<li class="icon fa-circle-o"> Office.</li>
 </ul>
+</br>
 <em>2008 – 2011 (3 ans et 6 mois)</em>
 <h2><em>Coordinatrice de projet et dessinatrice – Agence d'architecture BOUET - Rennes (35)</em></h2>
 <p>Relevés de bâtiments existants.<br>
 Réalisation de plans, de l’esquisse au DOE (maisons individuelles; écoles; logements collectifs; EPHAD; bureaux; réfectoire…).<br>
 Réunions de chantier. Réalisation d’un outil de calcul en isolation thermique, formation des collaborateurs sur Sketchup et Artlantis.</p>
-<ul>
-<li>[ ] Archicad</li>
-<li>[ ] Photoshop</li>
-<li>[ ] Sketchup</li>
-<li>[ ] Artlantis</li>
-<li>[ ] Office.</li>
+<ul class="icons">
+<li class="icon fa-circle-o"> Archicad</li>
+<li class="icon fa-circle-o"> Photoshop</li>
+<li class="icon fa-circle-o"> Sketchup</li>
+<li class="icon fa-circle-o"> Artlantis</li>
+<li class="icon fa-circle-o"> Office.</li>
 </ul>
+</br>
 <em>2007 (1 ans)</em>
 <h2><em>Coordinatrice de projet et dessinatrice - </em> <a href="http://www.ateliervoisin.fr/architecture-environnement/">Atelier dʼArchitecture Environnementale Voisins et Associés</a> - Bayeux (14)</h2>
 <p>Concours. Relevés de bâtiments existants. Réalisation de plans et 3D, de l’esquisse au DCE (maisons individuelles, bureaux, musée…). Recherche de matériaux.</p>
-<ul>
-<li>[ ] Autocad</li>
-<li>[ ] Photoshop</li>
-<li>[ ] Illustrator</li>
-<li>[ ] Sketchup</li>
-<li>[ ] Office.</li>
+<ul class="icons">
+<li class="icon fa-circle-o"> Autocad</li>
+<li class="icon fa-circle-o"> Photoshop</li>
+<li class="icon fa-circle-o"> Illustrator</li>
+<li class="icon fa-circle-o"> Sketchup</li>
+<li class="icon fa-circle-o"> Office.</li>
 </ul>
+</br>
 <em>2005 – 2007 (1 ans et 6 mois)</em>
 <h2><em>Responsable des dessinateurs(trices) - FRANCK DʼORTANE - Grenoble (38)</em></h2>
 <p>Constructeur de maisons individuelles en ossature bois.<br>
 Réalisation de plans, de l’esquisse au DCE (maisons individuelles ; bureaux). Préparation et suivis de chantier.</p>
-<ul>
-<li>[ ] Softplan</li>
-<li>[ ] Photoshop</li>
-<li>[ ] Office</li>
+<ul class="icons">
+<li class="icon fa-circle-o"> Softplan</li>
+<li class="icon fa-circle-o"> Photoshop</li>
+<li class="icon fa-circle-o"> Office</li>
 </ul>
+</br>
 <em>2003 – 2005 (1 ans et 6 mois)</em>
 <h2><em>Dessinatrice métreuse - </em> <a href="http://www.cruard-charpente.com/">CRUARD CHARPENTE</a> et <a href="https://www.mbc-maisonbois.com/">MAISON BOIS CRUARD</a> mi-temps dans chaque entreprise - Château Gontier (53)</h2>
 <p>Chez MBC : Réalisation de plans, de l’esquisse au PC de maisons individuelles.<br>
 Chez Cruard : Réalisation des plans de charpente/ossature bois.<br>
 Mise en place d’une méthodologie de travail collaborative entre l’architecte et bureau d’étude sur le logiciel SEMA.</p>
-<ul>
-<li>[ ] SEMA</li>
-<li>[ ] Autocad</li>
-<li>[ ] Photoshop</li>
-<li>[ ] Office.</li>
+<ul class="icons">
+<li class="icon fa-circle-o"> SEMA</li>
+<li class="icon fa-circle-o"> Autocad</li>
+<li class="icon fa-circle-o"> Photoshop</li>
+<li class="icon fa-circle-o"> Office.</li>
 </ul>
+</br>
 <em>1998 à 2003</em>
 <h2><em>Stages dans différentes entreprises :</em></h2>
 <p>Cabinet d’architectes, bureau d’étude béton, service urbanisme de mairie et conseil général, groupement d’artisans.</p>
@@ -168,6 +175,7 @@ Mise en place d’une méthodologie de travail collaborative entre l’architect
 				<!-- Footer -->
 					<footer id="footer">
 						<ul class="icons">
+							<li><script type=text/javascript> var name = "emilie.saverna" ; var domain = "gmail.com" ; document.write('<a href="mailto:' + name + '@' + domain + '" class="icon fa-envelope-o"><span class="label">Mail</span></a>') ;</script></li>
 							<li><a href="https://twitter.com/emilie_save" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
 							<li><a href="http://linkedin.com/in/emiliemelodia" class="icon fa fa-linkedin-square"><span class="label">Linkedin</span></a></li>
 						</ul>
