Retour au JS précédent
Il faut que je comprenne un peu mieux comment fonctionne GitHub

--- a/cv.html
+++ b/cv.html
@@ -175,28 +175,7 @@ Mise en place d’une méthodologie de travail collaborative entre l’architect
 				<!-- Footer -->
 					<footer id="footer">
 						<ul class="icons">
-							<li>
-								<script type="text/javascript" language="javascript">
-<!--
-// Email obfuscator script 2.1 by Tim Williams, University of Arizona
-// Random encryption key feature coded by Andrew Moulden
-// This code is freeware provided these four comment lines remain intact
-// A wizard to generate this code is at http://www.jottings.com/obfuscator/
-{ coded = "4sYPY4.eFL45aF@BsFYP.1gs"
-  key = "yTZgdYQKFm35v7NRxfj4G9nhAXHBqVczlsOMLbwWtopiDUa0Cr2Eu81kPeSJI6"
-  shift=coded.length
-  link=""
-  for (i=0; i<coded.length; i++) {
-    if (key.indexOf(coded.charAt(i))==-1) {
-      ltr = coded.charAt(i)
-      link += (ltr)
-    }
-    else {     
-      ltr = (key.indexOf(coded.charAt(i))-shift+key.length) % key.length
-      link += (key.charAt(ltr))
-    }
-  }
-							</li>
+							<li><script type=text/javascript> var name = "emilie.saverna" ; var domain = "gmail.com" ; document.write('<a href="mailto:' + name + '@' + domain + '" class="icon fa-envelope-o"><span class="label">Mail</span></a>') ;</script></li>
 							<li><a href="https://twitter.com/emilie_save" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
 							<li><a href="http://linkedin.com/in/emiliemelodia" class="icon fa fa-linkedin-square"><span class="label">Linkedin</span></a></li>
 						</ul>
