--- a/projets.html
+++ b/projets.html
@@ -142,6 +142,7 @@
 				<!-- Footer -->
 					<footer id="footer">
 						<ul class="icons">
+							<li><script type=text/javascript> var name = "emilie.saverna" ; var domain = "gmail.com" ; document.write('<a href="mailto:' + name + '@' + domain + '" class="icon fa-envelope-o"><span class="label">Mail</span></a>') ;</script></li>
 							<li><a href="https://twitter.com/emilie_save" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
 							<li><a href="http://linkedin.com/in/emiliemelodia" class="icon fa fa-linkedin-square"><span class="label">Linkedin</span></a></li>
 						</ul>
